@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_081017_3 - Market mode now compares against previous summary.
+
 saw_081017_2 - Update README.
 
 saw_081017_1 - Add market mode.
